--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.3.0",
     "@tanstack/react-query": "^5.17.10",
     "axios": "^1.6.2",
     "date-fns": "^3.2.0",
